--- a/tinkar-core/provider/executor-provider/pom.xml
+++ b/tinkar-core/provider/executor-provider/pom.xml
@@ -12,6 +12,11 @@
     <packaging>jar</packaging>
     <name>TINKAR Provider Executor provider</name>
 
+    <properties>
+        <sonar.skip>false</sonar.skip>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/tinkar-core/code-coverage-aggregator/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
