--- a/tinkar-core/terms/pom.xml
+++ b/tinkar-core/terms/pom.xml
@@ -9,6 +9,12 @@
     <artifactId>terms</artifactId>
     <packaging>jar</packaging>
     <name>TINKAR Terms</name>
+
+    <properties>
+        <sonar.skip>false</sonar.skip>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/tinkar-core/code-coverage-aggregator/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
