fixed jacoco xml path

--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -62,7 +62,7 @@
         <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>
         <protobuf-java.version>3.21.3</protobuf-java.version>
         <protobuf.version>1.5.0</protobuf.version>
-        <sonar.skip>true</sonar.skip>
+        <sonar.skip>false</sonar.skip>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/tinkar-core/code-coverage-aggregator/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 
     </properties>
