fixed jacoco xml path

--- a/tinkar-core/code-coverage-aggregator/pom.xml
+++ b/tinkar-core/code-coverage-aggregator/pom.xml
@@ -9,6 +9,7 @@
 
     <artifactId>code-coverage-aggregator</artifactId>
     <name>code coverage aggregator</name>
+    <packaging>pom</packaging>
 
     <properties>
         <sonar.skip>false</sonar.skip>
