--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -62,7 +62,7 @@
         <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>
         <protobuf-java.version>3.21.3</protobuf-java.version>
         <protobuf.version>1.5.0</protobuf.version>
-        <sonar.skip>false</sonar.skip>
+        <sonar.skip>true</sonar.skip>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
         <sonar.language>java</sonar.language>
