changed sonar plugin version

--- a/tinkar-core/sonar-project.properties
+++ b/tinkar-core/sonar-project.properties
@@ -1,12 +1,28 @@
-sonar.projectName=${JOB_NAME}
-sonar.projectVersion=1.0.0
-sonar.sources=src/main
-sonar.sourceEncoding=UTF-8
-sonar.language=java
-sonar.tests=src/test
-sonar.junit.reportsPath=target/surefire-reports
-sonar.surefire.reportsPath=target/surefire-reports
-sonar.jacoco.reportPath=target/jacoco.exec
-sonar.binaries=target/classes
-sonar.java.coveragePlugin=jacoco
-sonar.verbose=true
+sonar.projectKey=org.hl7.tinkar
+sonar.projectName=tinkar
+sonar.projectVersion=1.0.0-SNAPSHOT
+
+sonar.modules=collection,common,component,coordinate,entity,dto,terms
+
+collection.sonar.projectName=collection
+collection.sonar.sources=collection/src
+
+common.sonar.projectName=common
+common.sonar.sources=common/src
+
+component.sonar.projectName=component
+component.sonar.sources=component/src
+
+coordinate.sonar.projectName=coordinate
+coordinate.sonar.sources=coordinate/src
+
+entity.sonar.projectName=entity
+entity.sonar.sources=entity/src
+
+dto.sonar.projectName=dto
+dto.sonar.sources=dto/src
+
+terms.sonar.projectName=terms
+terms.sonar.sources=terms/src
+
+
