changed sonar plugin version

--- a/sonar.properties
+++ b/sonar.properties
@@ -3,3 +3,5 @@ sonar.projectName=tinkar-parent
 sonar.projectVersion=1.0.0-SNAPSHOT
 
 sonar.modules=tinkar-core
+
+# line added for webhook testing 721pm
