--- a/jpms-deps/auto-service/pom.xml
+++ b/jpms-deps/auto-service/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>auto-service</artifactId>
     <packaging>jar</packaging>
     <name>TINKAR: Auto service</name>
+    <version>${auto-service.version}</version>
     <build>
         <plugins>
             <plugin>
