--- a/jpms-deps/lucene/pom.xml
+++ b/jpms-deps/lucene/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>lucene</artifactId>
     <packaging>jar</packaging>
     <name>TINKAR: Lucene</name>
+    <version>${lucene.version}</version>
     <dependencies>
         <dependency>
             <groupId>org.apache.lucene</groupId>
