--- a/jpms-deps/mvstore/pom.xml
+++ b/jpms-deps/mvstore/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>mvstore</artifactId>
     <packaging>jar</packaging>
     <name>TINKAR: MVStore</name>
+    <version>${h2-mvstore.version}</version>
     <build>
         <plugins>
             <plugin>
