--- a/jpms-deps/roaring/pom.xml
+++ b/jpms-deps/roaring/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>roaring</artifactId>
     <packaging>jar</packaging>
     <name>TINKAR: Roaring</name>
+    <version>${roaringbitmap.version}</version>
     <build>
         <plugins>
             <plugin>
