--- a/jpms-deps/record-builder-core/pom.xml
+++ b/jpms-deps/record-builder-core/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>record-builder-core</artifactId>
     <packaging>jar</packaging>
     <name>TINKAR: Record builder</name>
+    <version>${record-builder-core.version}</version>
     <build>
         <plugins>
             <plugin>
