--- a/jpms-deps/snorocket/pom.xml
+++ b/jpms-deps/snorocket/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>snorocket</artifactId>
+    <version>${snorocket.version}</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
