--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -19,29 +19,64 @@
         </license>
     </licenses>
     <properties>
-        <auto-service.version>1.0-rc7</auto-service.version>
-        <eclipse-collections-api.version>11.0.0.M1</eclipse-collections-api.version>
+        <auto-service.version>1.0.1</auto-service.version>
+        <activej.version>4.3</activej.version>
+        <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
+        <caffeine.version>3.1.1</caffeine.version>
+        <eclipse-collections-api.version>11.1.0</eclipse-collections-api.version>
         <jetty-slf4j-impl.version>11.0.7</jetty-slf4j-impl.version>
         <jgrapht.version>1.5.0</jgrapht.version>
         <junit.version>5.6.3</junit.version>
-        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <h2-mvstore.version>1.4.200</h2-mvstore.version>
+        <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
+        <jheaps.version>0.14</jheaps.version>
+        <lucene.version>8.9.0</lucene.version>
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <maven-assembly-plugin.version>3.5.0</maven-assembly-plugin.version>
         <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
-        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
-        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
-        <maven-project-info-reports-plugin.version>3.1.2</maven-project-info-reports-plugin.version>
-        <maven-site-plugin.version>3.9.1</maven-site-plugin.version>
         <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.0.0-M9</maven-failsafe-plugin.version>
+        <org.reactivestreams.version>1.0.3</org.reactivestreams.version>
+        <record-builder-core.version>34</record-builder-core.version>
+        <roaringbitmap.version>0.9.31</roaringbitmap.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
+        <maven.resources.plugin.version>3.3.0</maven.resources.plugin.version>
+        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
+        <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
+        <maven.install.plugin.version>3.0.1</maven.install.plugin.version>
+        <maven.deploy.plugin.version>3.0.0</maven.deploy.plugin.version>
+        <maven-site-plugin.version>3.12.0</maven-site-plugin.version>
+        <maven-project-info-reports-plugin.version>3.4.0</maven-project-info-reports-plugin.version>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <record-builder-core.version>33</record-builder-core.version>
-        <roaringbitmap.version>0.9.8</roaringbitmap.version>
         <slf4j.version>2.0.0-alpha6</slf4j.version>
         <testng.version>7.4.0</testng.version>
         <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>
-        <tinkar.protobuf.version>1.5.0</tinkar.protobuf.version>
+        <protobuf-java.version>3.21.3</protobuf-java.version>
+        <protobuf.version>1.5.0</protobuf.version>
+        <sonar.skip>false</sonar.skip>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+        <sonar.language>java</sonar.language>
+
+        <maven.compiler.source>19</maven.compiler.source>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+        <junit-jupiter-engine.version>5.7.0</junit-jupiter-engine.version>
+        <junit-platform-surefire-provider.version>1.3.0</junit-platform-surefire-provider.version>
+        <junit-platform-commons.version>1.7.0</junit-platform-commons.version>
+        <junit-platform-launcher.version>1.7.0</junit-platform-launcher.version>
+        <surefire-api.version>3.0.0-M9</surefire-api.version>
+        <common-java5.version>3.0.0-M9</common-java5.version>
+        <maven-surefire-report-plugin.version>3.0.0-M9</maven-surefire-report-plugin.version>
+        <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
+        <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
+        <!-- <sonar-version>3.7.0.1746</sonar-version> -->
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+
     </properties>
     <dependencyManagement>
         <dependencies>
