--- a/tinkar-core/dto/pom.xml
+++ b/tinkar-core/dto/pom.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+    <build>
+        <plugins>
+
+        </plugins>
+    </build>
     <parent>
         <artifactId>tinkar</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-
     <artifactId>dto</artifactId>
     <packaging>jar</packaging>
-    <name>TINKAR Data Transfer Objects</name>
-
-    <properties>
-        <sonar.skip>false</sonar.skip>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-    </properties>
-
+    <name>TINKAR: Data Transfer Objects</name>
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
@@ -26,12 +24,12 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>activej</artifactId>
-            <version>${activej.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>record-builder-core</artifactId>
-            <version>${record-builder-core.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
