--- a/tinkar-core/entity/pom.xml
+++ b/tinkar-core/entity/pom.xml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    
     <parent>
         <groupId>org.hl7.tinkar</groupId>
         <artifactId>tinkar</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-
     <artifactId>entity</artifactId>
     <packaging>jar</packaging>
-    <name>TINKAR Entity</name>
-
-    <properties>
-        <sonar.skip>false</sonar.skip>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-    </properties>
-
+    <name>TINKAR: Entity</name>
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
@@ -42,18 +36,18 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>caffeine</artifactId>
-            <version>${caffeine.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>record-builder-core</artifactId>
             <scope>provided</scope>
-            <version>${record-builder-core.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>auto-service</artifactId>
-            <version>${auto-service.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -61,16 +55,11 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>        
-        <dependency>
-            <groupId>org.hl7.tinkar</groupId>
-            <artifactId>protobuf</artifactId>
-            <version>${protobuf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
-            <artifactId>protobuf-java</artifactId>
-            <version>${protobuf-java.version}</version>
+            <artifactId>protobuf</artifactId>
+            <version>${tinkar.protobuf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jgrapht</groupId>
@@ -86,7 +75,7 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>jheaps</artifactId>
-            <version>${jheaps.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
         </dependency>
     </dependencies>
 </project>
