--- a/tinkar-core/provider/data-mvstore-provider/pom.xml
+++ b/tinkar-core/provider/data-mvstore-provider/pom.xml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <artifactId>provider</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-
     <artifactId>data-mvstore-provider</artifactId>
     <packaging>jar</packaging>
-    <name>TINKAR Provider Data - MVStore</name>
-
-    <properties>
-        <sonar.skip>false</sonar.skip>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-    </properties>
-
+    <name>TINKAR Provider: Data - MVStore</name>
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
@@ -37,7 +30,7 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>mvstore</artifactId>
-            <version>${h2-mvstore.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
@@ -69,11 +62,6 @@
                     <!-- <argLine>-Dchronicle.values.dumpCode=true ... -->
                     <!--                    <argLine>&#45;&#45;illegal-access=permit &#45;&#45;add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine> -->
                     <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
-
-                    <dependenciesToScan>
-                        <dependency>org.hl7.tinkar:component:test-jar:tests</dependency>
-                    </dependenciesToScan>
-
                 </configuration>
             </plugin>
         </plugins>
