--- a/tinkar-core/provider/data-mvstore-provider/pom.xml
+++ b/tinkar-core/provider/data-mvstore-provider/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>mvstore</artifactId>
-            <version>${tinkar-jpms-deps.version}</version>
+            <version>${h2-mvstore.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
