--- a/tinkar-core/provider/search-provider/pom.xml
+++ b/tinkar-core/provider/search-provider/pom.xml
@@ -24,13 +24,13 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>lucene</artifactId>
-            <version>${tinkar-jpms-deps.version}</version>
+            <version>${lucene.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>auto-service</artifactId>
-            <version>${tinkar-jpms-deps.version}</version>
+            <version>${auto-service.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
