--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -230,6 +230,16 @@
                     </reportsDirectories>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.7.3.2</version>
+                <configuration>
+                    <xmlOutput>true</xmlOutput>
+                    <!-- Optional directory to put spotbugs xdoc xml report -->
+                    <xmlOutputDirectory>target/site</xmlOutputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </reporting>
     <distributionManagement>
